--- a/styles/style.css
+++ b/styles/style.css
@@ -10,9 +10,9 @@
 }
 
 
-.body{
+body{
   font-family: "Inter", sans-serif;
-  background-color: black ;
+  background: black;
 }
 
 
@@ -49,9 +49,9 @@ nav {
 nav > div{
     width: 40%;
     border: 1px solid white;
-    box-shadow: rgba(228, 8, 8, 0.05) 0px 6px 24px 0px, rgba(211, 10, 10, 0.08) 0px 0px 0px 1px;
     border-radius: 2rem;
-    padding: 0.4rem 0.5rem;
+    box-shadow: rgba(228, 8, 8, 0.05) 0px 6px 24px 0px, rgba(211, 10, 10, 0.08) 0px 0px 0px 1px;
+    padding: 0.4rem;
 }
 nav .fa-solid{
     display: none;
@@ -70,7 +70,7 @@ nav > div > ul > li{
 nav > h1{
     font-size: 4rem;
 }
-.Home{
+.Home-bar{
     border-radius: 1rem;
     padding: 0.5rem 1.5rem;
 }
@@ -96,7 +96,7 @@ nav > h1{
 }
 .first-banner h1 > span{
     font-family: "Dancing Script", cursive;
-    font-size: 6rem;
+    font-size: 5rem;
     font-style: 500;
 
 
@@ -107,7 +107,6 @@ nav > h1{
 }
 .btn-primary{
     padding: 0.7rem 2.5rem;
-    border: none;
     border-radius: 2rem;
     border: 2px solid gray;
     color: white;
@@ -117,6 +116,11 @@ nav > h1{
 }
 .border{
     border: none;
+    background-color: rgb(230, 83, 60);
+}
+.button-content{
+    background-color: black;
+
 }
 .second-banner{
     height: 600px;
@@ -151,6 +155,7 @@ nav > h1{
     font-size: 0.8rem;
 }
 .text-350{
+     margin-top: 30px;
     bottom: 50px;
     left: 0;
     display: flex;
@@ -158,6 +163,121 @@ nav > h1{
     justify-content: space-evenly;
 }
 .fa-circle-play{
-    font-size: 2rem;
+    font-size: 3rem;
     color: tomato;
+}
+
+
+
+
+
+.change-container{
+    max-width: 1100px;
+    margin: 0 auto;
+    color: white;
+    background: #000;
+}
+.change-text-content{
+    text-align: center;
+    margin-top: 123px;
+    margin-bottom: 54px;
+}
+.change-text-content h2{
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+.change-text-content p{
+    font-size: 1rem;
+    color: #FFFFFF80;
+}
+.habits-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 40px;
+
+
+}
+.habit{
+    text-align: center;
+    margin-bottom: 74px;
+}
+.habit p{
+    margin-top: 7px;
+    font-size: 0.9rem;
+    color: #FFFFFF80;
+
+}
+
+.habit img{
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    margin-bottom: 26px;
+    border: 5px solid #f3eaea80;
+}
+
+
+
+
+
+
+
+
+
+
+
+@media  only screen and (max-width:576px)  {
+    nav{
+        justify-content: space-evenly;
+    }
+    
+    nav div{
+        border: none;
+        width: 10%;
+        box-shadow: none;
+        text-align: right;
+    }
+
+    nav>div>ul{
+        display: none;
+    }
+
+    nav.fa-solid{
+        display: block;
+        font-size: 1.4rem;
+    }
+
+    .banner-container{
+        grid-template-columns: 1fr;
+    }
+    .banner-right img{
+        width: 70%;
+        margin: 0 auto;
+    }
+    .text-500,.text-350{
+        width: 150px;
+        background: #363636;
+        box-shadow: rgba(60, 45, 45, 0.05) 0px 6px 24px 0px, rgba(92, 90, 90, 0.08) 0px 0px 0px 1px;
+        padding: 10px;
+
+    }
+
+    .text-500{
+        top: 70px;
+        right: 20px;
+        padding: 10px;
+    }
+    .text-350{
+        top: 270px;
+        left: 20px;
+    }
+
+    .habits-container{
+        width:95% ;
+        margin: 0 auto;
+        grid-template-columns: 1fr;
+        gap: 10px;
+        padding: 0;
+      }
+  
 }
