--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,15 @@ nav > div{
 }
 nav .fa-solid{
     display: none;
+    margin-left: 30px;
 }
+
+.Home-bar{
+    border-radius: 1rem;
+    padding: 0.5rem 1.5rem;
+}
+
+
 nav > div > ul{
     font-weight: 700;
     display: flex;
@@ -69,10 +77,6 @@ nav > div > ul > li{
 }
 nav > h1{
     font-size: 4rem;
-}
-.Home-bar{
-    border-radius: 1rem;
-    padding: 0.5rem 1.5rem;
 }
 
  
@@ -168,19 +172,16 @@ nav > h1{
 }
 
 
-
-
-
 .change-container{
     max-width: 1100px;
     margin: 0 auto;
     color: white;
-    background: #000;
+   
 }
 .change-text-content{
     text-align: center;
-    margin-top: 123px;
-    margin-bottom: 54px;
+    margin-top: 120px;
+    margin-bottom: 55px;
 }
 .change-text-content h2{
     font-size: 2rem;
@@ -193,7 +194,7 @@ nav > h1{
 .habits-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 40px;
+    gap: 37px;
 
 
 }
@@ -202,7 +203,7 @@ nav > h1{
     margin-bottom: 74px;
 }
 .habit p{
-    margin-top: 7px;
+    margin-top: 8px;
     font-size: 0.9rem;
     color: #FFFFFF80;
 
@@ -213,13 +214,49 @@ nav > h1{
     height: 180px;
     border-radius: 50%;
     margin-bottom: 26px;
-    border: 5px solid #f3eaea80;
+    
 }
 
+.run-container{
+    max-width: 1100px;
+    margin: 0 auto;
+    border-radius: 1rem;
+    margin-bottom: 100px;
+    color: white;
+    background-color: #222222;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 160px;
+    padding: 30px 30px 30px 48px;
+   
+    
+}
+.run-content h1{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+.run-content p{
+    font-size: 1rem;
+    margin-bottom: 2rem;
+    color: #FFFFFF80;
+}
+.run-img img{
+    max-width: 380px;
+    height: 280px;
+    border-radius: 1rem;
+    margin-left: 2px;
+}
 
-
-
-
+.btn-primary-run{
+    background: #e6533c;
+    padding: 0.7rem 2.5rem;
+    border-radius: 2rem;
+    border: 2px solid;
+    font-weight: 700;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+}
 
 
 
@@ -242,7 +279,7 @@ nav > h1{
         display: none;
     }
 
-    nav.fa-solid{
+    nav .fa-solid{
         display: block;
         font-size: 1.4rem;
     }
@@ -273,11 +310,40 @@ nav > h1{
     }
 
     .habits-container{
-        width:95% ;
-        margin: 0 auto;
+        width: 96% ;
         grid-template-columns: 1fr;
         gap: 10px;
         padding: 0;
       }
+
+      
+    .run-container{
+       
+        grid-template-columns: 1fr;
+        gap: 20px;
+        width: 91%;
+        margin: 0 auto;
+        padding: 0;
+        height: 100%;
+    }
+    .run-content{
+        padding: 40px;
+
+    }
+    .run-content-img{
+        width: 90%;
+        margin: 0 auto;
+    }
+    .run-content-img img{
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+    .btn-primary-run{
+        margin: 0 65px;
+        border: 20px;
+        
+
+    }
   
 }
