--- a/styles/style.css
+++ b/styles/style.css
@@ -249,16 +249,12 @@ nav > h1{
 }
 
 .btn-primary-run{
-    background: #e6533c;
     padding: 0.7rem 2.5rem;
-    border-radius: 2rem;
-    border: 2px solid;
+    border-radius: 15px;
+ color: white;
     font-weight: 700;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
+    background: #e6533c;
 }
-
-
 
 
 
