--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ nav {
 
 nav > div{
     width: 40%;
-    border: 1px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.167);
     border-radius: 2rem;
     box-shadow: rgba(228, 8, 8, 0.05) 0px 6px 24px 0px, rgba(211, 10, 10, 0.08) 0px 0px 0px 1px;
     padding: 0.4rem;
@@ -113,7 +113,7 @@ nav > h1{
 .btn-primary{
     padding: 0.7rem 2.5rem;
     border-radius: 2rem;
-    border: 2px solid gray;
+    border: 2px solid rgba(128, 128, 128, 0.461);
     color: white;
     font-weight: 700;
     margin-right: 1rem;
@@ -229,7 +229,6 @@ nav > h1{
     border-radius: 1rem;
     margin-bottom: 100px;
     color: white;
-    background-color: #222222;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -254,13 +253,87 @@ nav > h1{
     margin-left: 2px;
 }
 
-.btn-primary-run{
-    padding: 0.7rem 2.5rem;
-    border-radius: 15px;
- color: white;
-    font-weight: 700;
-    background: #e6533c;
+
+
+
+
+
+
+.card-container{
+    max-width: 1100px;
+     margin: 0 auto;
+    padding: 3.8rem 0;
 }
+.card-content{
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+}
+.card-content h1{
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 700px; 
+        margin-bottom: 1rem;
+     
+
+}
+.card-content p{
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+    color: rgb(255, 255, 255, 0.5);
+}
+.card-image-body{
+    margin: auto 0;
+    margin-top: 47px;
+    gap: 1rem;
+    border-radius: 16px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 1.2rem;
+
+}
+.card-team{
+
+    max-width: 100%;
+    max-height: 300px;
+    height: 280px;
+    border-radius: 16px;
+    position: relative;
+
+    
+
+}
+.card-team img{
+    width: 100%;
+    height: 100%;
+    border-radius: 14px;
+    filter:brightness(81%);
+
+}
+.card-text{
+    position: absolute;
+    color: white;
+    left: 2rem;
+    bottom: 2rem;
+}
+
+.card-text p{
+    font-size: 0.9rem;
+    color:rgba(244, 228, 228, 0.5) ;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -344,8 +417,17 @@ nav > h1{
     .btn-primary-run{
         margin: 0 65px;
         border: 20px;
-        
 
+    }
+
+
+
+
+
+    .card-image-body{
+        width: 90%;
+        margin: 0 auto;
+        grid-template-columns: 1fr;
     }
   
 }
