--- a/styles/style.css
+++ b/styles/style.css
@@ -16,17 +16,12 @@ body{
 }
 
 
-
-
-
 .nav-color{
     color: #e6533c;
 }
 .nav-background{
     background-color: #e6533c;
 }
-
-
 
 header {
     height: 100%;
@@ -78,11 +73,6 @@ nav > div > ul > li{
 nav > h1{
     font-size: 4rem;
 }
-
- 
-
-
-
 .banner-container{
     max-width: 1100px;
     margin: 0 auto;
@@ -253,15 +243,6 @@ nav > h1{
     margin-left: 2px;
 }
 
-.odvut{
-    width: 100%;
-}
-
-
-
-
-
-
 .card-container{
     max-width: 1100px;
      margin: 0 auto;
@@ -325,21 +306,59 @@ nav > h1{
     color:rgba(244, 228, 228, 0.5) ;
 
 }
+.footer-container{
+    max-width: 1100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    gap:100px;
 
+}
+.footer-content p{
+    margin-top: 20px;
+}
 
+.footer-content ul>li{
+    margin-bottom: 15px;
 
+}
 
+.footer-content h2{
+    font-size: 68px;
+    margin-bottom: 1rem;
+}
+.footer-content> ul> li> h3{
+    font-size: 1rem;
+    color: white;
+}
+.footer-content p{
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    color:rgba(244, 228, 228, 0.5) ;
+}
 
+a{
+    text-decoration:  none;
+    color:rgba(244, 228, 228, 0.5) ;
+}
 
+.last-content{
+    max-width:1100px;
+    margin: 0 auto;
+    color: gray;
 
-
-
-
-
-
-
-
-
+}
+.last-content hr{
+    margin-bottom: 10px;
+    border-color: rgba(128, 128, 128, 0.459);
+    
+}
+.last-content p{
+    font-size: 20px;
+    text-align: center;
+}
 
 @media  only screen and (max-width:576px)  {
     nav{
@@ -370,7 +389,7 @@ nav > h1{
         margin: 0 auto;
     }
     .text-500,.text-350{
-        width: 150px;
+        width: 140px;
         background: #363636;
         box-shadow: rgba(60, 45, 45, 0.05) 0px 6px 24px 0px, rgba(92, 90, 90, 0.08) 0px 0px 0px 1px;
         padding: 10px;
@@ -433,4 +452,25 @@ nav > h1{
         grid-template-columns: 1fr;
     }
   
+    .odvut {
+        width: 100%;
+    }
+    
+
+    
+    .footer-container{
+        max-width: 93%;
+        margin: 0 auto;
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+    .last-content{
+        max-width: 90%;
+        margin: 0 auto;
+    }
+    .last-content p{
+        text-align: left;
+    }
+    
+    
 }
