--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,7 @@ nav > h1{
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+   
 
 }
 .first-banner h1{
@@ -182,7 +183,7 @@ nav > h1{
 }
 .change-text-content p{
     font-size: 1rem;
-    color: #FFFFFF80;
+    color: #ffffff8f;
 }
 .habits-container{
     display: grid;
@@ -219,6 +220,9 @@ nav > h1{
     gap: 160px;
     color: white;
     padding: 30px 30px 30px 48px;
+    background: rgba(34, 34, 34, 0.74);
+    border-radius: 16px;
+    
    
     
 }
@@ -262,6 +266,7 @@ nav > h1{
 .bmi-container{
     padding-top: 40px;
     padding-bottom: 46px;
+    background: rgba(54, 49, 49, 0.5);
 }
 
 .bmi-content{
@@ -357,10 +362,11 @@ nav > h1{
     margin: auto 0;
     margin-top: 47px;
     gap: 1rem;
-    border-radius: 16px;
+    background:rgba(161, 142, 142, 0.205);
+    border-radius: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding: 1.2rem;
+    padding: 20px;
 
 }
 .card-team{
@@ -393,14 +399,18 @@ nav > h1{
     color:rgba(244, 228, 228, 0.5) ;
 
 }
+footer{
+    background: rgba(54, 49, 49, 0.5);
+}
 .footer-container{
     max-width: 1100px;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 60px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 3fr 1fr 1fr;
     gap:100px;
+  
 
 }
 
@@ -416,7 +426,8 @@ nav > h1{
 
 
 .footer-content ul>li{
-    margin-bottom: 10px;
+    margin-bottom: 27px;
+    list-style: none;
     
 
 }
