--- a/styles/style.css
+++ b/styles/style.css
@@ -9,14 +9,10 @@
 
 }
 
-
 body{
   font-family: "Inter", sans-serif;
   background: black;
 }
-
-
-
 
 header {
     height: 100%;
@@ -182,7 +178,7 @@ nav > h1{
     margin-bottom: 1rem;
 }
 .change-text-content p{
-    font-size: 1rem;
+    font-size: 18px;
     color: #ffffff8f;
 }
 .habits-container{
