--- a/styles/style.css
+++ b/styles/style.css
@@ -32,8 +32,8 @@ nav {
 
 nav  div{
     width: 40%;
-    border: 1px solid rgba(255, 255, 255, 0.192);
-    border-radius: 2rem;
+    border: 1px solid rgba(255, 255, 255, 0.315);
+    border-radius: 29px;
     padding: 0.7rem;
 }
 nav .fa-solid{
@@ -519,7 +519,7 @@ a{
         
     }
     .run-content{
-        padding: 40px;
+        padding: 20px;
 
     }
     .run-content-img{
