--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,7 @@ nav > h1{
 .text-500,.text-350{
    
     width: 190px;
-    height: 90px;
+    height: 88px;
     filter: blur(20);
     background: gray;
     position: absolute;    
@@ -397,7 +397,7 @@ nav > h1{
 
 }
 footer{
-    background: rgba(54, 49, 49, 0.5);
+    background: rgba(54, 49, 49, 0.356);
 }
 .footer-container{
     max-width: 1100px;
@@ -522,20 +522,13 @@ a{
         padding: 20px;
 
     }
-    .run-content-img{
-        width: 90%;
-        
-    }
-    .run-content-img img{
-        width: 100%;
+    
+    .run-container .run-img{
         margin: 0 auto;
-        margin-bottom: 10px;
+        max-width: 80%;
     }
-    .btn-primary-run{
-        margin: 0 65px;
-        border: 20px;
-
-    }
+    
+   
 
     .bmi-text{
         margin-top: 15px;
