--- a/styles/style.css
+++ b/styles/style.css
@@ -396,6 +396,75 @@ nav > h1{
     color:rgba(244, 228, 228, 0.5) ;
 
 }
+
+
+.instruments-container{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    max-width:1100px ;
+    margin: 0 auto;
+    color: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+}
+.instruments-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.instruments-left h1{
+    font-size: 9rem;
+    background: linear-gradient(to right, #f9ef30 0%, #ef400b 100%);
+    color: transparent;
+    background-clip: text;
+}
+.instruments-left h2{
+    margin-bottom: 50px;
+    font-size: 2rem;
+    margin-top: 20px;
+}
+.fa-clock,.fa-carrot{
+    font-size: 50px;
+    color: #fdfbf6;
+    padding: 20px;
+    background: linear-gradient(to right, #920e0e 0, #efcd0b 50%);
+    border-radius: 16px;
+     opacity: 0.7; 
+
+
+}
+.card-1,.card-2 p{
+    font-size: 0.8rem;
+    background: linear-gradient(to right, #bfbbad 0%, #ef400b 100%);
+    color: transparent;
+    background-clip: text;
+
+}
+.card-1,.card-2{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-bottom: 50px;
+
+
+}
+.instruments-right img{
+    max-width: 300px;
+    max-height: 350px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px 5px rgb(111, 107, 23);
+}
+.instruments-right{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
+}
+.width{
+    width: 50%;
+    background: linear-gradient(to right, #f9ef30 0%, #ef400b 100%);
+}
+
 footer{
     background: rgba(54, 49, 49, 0.74);
 }
@@ -508,6 +577,9 @@ a{
         padding: 0;
       }
 
+     .habit .img{
+        size: 50px;
+     }
       
     .run-container{
         width: 90%;
@@ -528,8 +600,6 @@ a{
         max-width: 80%;
     }
     
-   
-
     .bmi-text{
         margin-top: 15px;
         max-width: 80%;
@@ -564,6 +634,21 @@ a{
     .odvut{
         width: 100%;
     }
+
+    .instruments-container{
+        grid-template-columns: 1fr;
+        gap: 50px;
+        width: 90%;
+        margin: 0 auto;
+    }
+    .instruments-right{
+        width: 90%;
+        margin: 0 auto;
+    }
+    .instruments-right img{
+        width: 100%;
+    }
+   
     
     .footer-container{
         max-width: 93%;
