--- a/styles/style.css
+++ b/styles/style.css
@@ -189,22 +189,23 @@ nav > h1{
 
 
 }
-.habit{
+.habit-content{
     text-align: center;
     margin-bottom: 60px;
 }
-.habit p{
+.habit-content p{
     margin-top: 8px;
     font-size: 14px;
     color: #FFFFFF80;
 
 }
 
-.habit img{
+.habit-content img{
     width: 180px;
     height: 180px;
     border-radius: 50%;
     margin-bottom: 20px;
+    
     
 }
 
@@ -399,9 +400,9 @@ nav > h1{
 
 
 .instruments-container{
+    max-width:1100px ;
     padding-top: 100px;
     padding-bottom: 100px;
-    max-width:1100px ;
     margin: 0 auto;
     color: white;
     display: grid;
@@ -515,7 +516,7 @@ a{
 
 }
 .last-content hr{
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     border-color: rgba(128, 128, 128, 0.459);
     
 }
@@ -574,8 +575,8 @@ a{
         padding: 0;
       }
 
-     .habit .img{
-        size: 50px;
+     .habit-content .img{
+        size: 80px;
      }
       
     .run-container{
